--- a/index.html
+++ b/index.html
@@ -8,42 +8,72 @@
 </head>
 <body>
     <h1>Rakesh Sathawane</h1>
-    <p>Software Developer, Educator at Geekster</p>
-    <a href="https://www.linkedin.com/in/bittoo-aggarwal/">Linkedin</a>
-    <a href="https://github.com/bitz1119">Github</a>
+    <p>A motivated student ,eager to give my career a solid start.</p>
+    <a href="https://www.linkedin.com/in/rakesh-sathawane-609971235/">Linkedin</a>
+    <a href="https://github.com/RakeshSathawane">Github</a>
     <hr>
-    <h2>Experience</h2>
-    <h3> Software developer at Amazon</h3>
-    <p>I work with amazon in transportation team, some more description Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, ullam! Maxime officiis consequuntur libero eaque reprehenderit quisquam nam ab vitae totam id commodi laborum enim, sint ea odit quasi soluta!
+    <h2>EDUCATION</h2>
+    <h3>Bachelors in Information Technology </h3>
+    <h3>Yeshwantrao Chavan College of Engineering, Nagpur</h3>
+    <p>08/2019 &nbsp;to &nbsp; 06/2023
         <br>
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident iusto ut praesentium modi. Incidunt atque voluptatem, dignissimos officiis reprehenderit est!
+        CGPA - 8.49
     </p>
     <hr>
 
-    <h3> Educator at Geekster</h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora cum inventore aliquam, nulla eos dignissimos ipsum voluptas id, dolores suscipit totam nostrum perferendis alias, expedita quaerat distinctio asperiores! Nobis, aliquid.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ipsa ab qui autem nesciunt vel consequatur non totam, temporibus excepturi voluptatem iure impedit ut repellendus earum necessitatibus nemo eligendi, animi debitis reiciendis suscipit. Unde iure obcaecati dolores, numquam quibusdam rerum facilis a quam quos ad ullam consectetur reiciendis deserunt similique.
+    <h3>Class X - SSC</h3>
+    <h3>Sunny's Spring Dale School, Bhandara</h3>
+    <p>CBSE <br>
+        CGPA -10 (96%)
+    </p>
+    <hr>
+    <h3>Class XII - HSC</h3>
+    <h3>ST. Paul Junior College, Nagpur</h3>
+    <p>MSBSHSE <br>
+        73.23%
     </p>
     <hr>
 
-    <h2>Skills</h2>
-    <!-- how to comment -->
-    <!-- I want to add skills list -->
+    <h2>Skills</h2>   
     <ul>
         <li>Java</li>
-        <li>JavaScript</li>
-        <li>Testing</li>
-        <li>API Designing</li>
-        <li>System Design</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>C++</li>
+        <li>C</li>
+    </ul><hr>
+    <h3>PERSONAL PROJECTS</h3>
+    <ul>
+        <li>Real Time Multi-Client Chat Application</li>
+        <li>Sensor-Based Baby Massager Garment (Mini-Project) & (Major-Project)</li>
+        <ul>
+            <li>Presented at Innovation Gallery YCCE</li>
+        </ul>
     </ul>
-
     <hr>
+    <h3>CERTIFICATES</h3>
+    <ul>
+        <li>Learn C++ Programming - Beginner to Advance - Deep Dive in C++</li>
+        <ul>
+            <li>Udemy</li>
+        </ul>
+        <li>Internship Certificate from Maharashtra Remote Sensing Application Centre(MRSAC)</li>
+        <ul>
+            <li>Topic:- Flood Detection Using Satellite Images</li>
+        </ul>
+        <li>Research Paper on Prediction of Heart Diseases using Data Mining Technique (SPANDAN-2022)</li>
+        <ul>
+            <li>Presented at SPANDAN-2022( A National Conference on Advances in Engineering ,Technology and Applied Sciences)</li>
+        </ul>
+        <li>Barclays Life Skills Programme by GTT Foundation</li>
+        <hr>
+    </ul>
     <h2>Hobbies</h2>
     <ol>
-        <li>Table Tennis</li>
-        <li>Reading Books</li>
-        <li>Biography</li>
-        <li>Teaching</li>
+        <li>Cricket</li>
+        <li>Drawing</li>
+        <li>Shayari</li>
+        <li>Guitar Playing</li>
     </ol>
     <hr>
 </body>
